# LangChain_RAG-llama3.2-latest_-_nomic-embed-text-latest-

./: .gitignore  README.md  app.py  config.py  ingest.py  pyproject.toml  requirements.txt  run.py
docs/: 00_Index  01_system_architecture.md  02_config_explained.md  03_ingest_explained.md  04_app_explained.md  05_operational_mechanics.md
